fixed overflow alertbox url not found search mobile version

--- a/PwaArchive-access/projects/nutchwax/nutchwax-webapp/src/main/webapp/css/newStyle.css
+++ b/PwaArchive-access/projects/nutchwax/nutchwax-webapp/src/main/webapp/css/newStyle.css
@@ -580,3 +580,7 @@ em{
     margin-bottom: 10px;
     padding-bottom: 5px;
 }
+
+.break-word{
+    word-wrap: break-word;
+}
